[project]
name = "ccc-register"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckduckgo-search>=8.1.1",
    "fastapi>=0.127.0",
    "langchain>=1.2.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.4",
    "langchain-deepseek>=1.0.1",
    "langchain-huggingface>=1.2.0",
    "langchain-tavily>=0.2.15",
    "langchain-text-splitters>=1.1.0",
    "langgraph>=1.0.5",
    "langsmith>=0.5.0",
    "pyowm>=3.5.0",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.40.0",
]
